--- a/src/components/ImageDisplay/index.module.css
+++ b/src/components/ImageDisplay/index.module.css
@@ -42,5 +42,9 @@
       width: 100px;
       height: 100px;
     }
+    &.contact {
+      width: 65px;
+      height: 60px;
+    }
   }
 }
